# eduplatform

./: .gitignore  CI-CD-SETUP.md  CLAUDE.md  PRD.md  README.md  docker-compose.yml  docker-links.txt  links.txt  sonar-project.properties
.github/workflows/: ci-cd.yml
backend/: .env.example  .env.test  .gitignore  API_ENDPOINTS.md  DEVELOPMENT_PLAN.md  DOMAIN_LAYER.md  Dockerfile  EER.md  Makefile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py
backend/scripts/: generate_risk_dataset.py  recalc_gamification.py  run_ml_scoring.py  seed.py  seed_full.py  train_risk_model.py
backend/src/: config.py  database.py  main.py  redis.py
backend/src/api/: dependencies.py
backend/src/api/v1/: files.py  gamification.py  notifications.py  public.py  router.py
backend/src/api/v1/auth/: __init__.py  router.py  schemas.py
backend/src/api/v1/crm/: activities.py  analytics.py  contracts.py  funnels.py  leads.py  notifications.py  tasks.py
backend/src/api/v1/lms/: analytics.py  attendance.py  catalog.py  compensation.py  enrollments.py  exams.py  grades.py  groups.py  homework.py  late_requests.py  lessons.py  mup_tasks.py  notifications.py  payments.py  reports.py  students.py  users.py
backend/src/api/v1/student/: portal.py
backend/src/application/auth/: use_cases.py
backend/src/application/crm/funnels/: use_cases.py
backend/src/application/crm/leads/: use_cases.py
backend/src/application/interfaces/: repositories.py
backend/src/application/lms/groups/: use_cases.py
backend/src/application/lms/lessons/: use_cases.py
backend/src/application/lms/students/: use_cases.py
backend/src/domain/auth/: entities.py  policies.py  specifications.py  value_objects.py
backend/src/domain/crm/: entities.py  events.py  policies.py  specifications.py  value_objects.py
backend/src/domain/gamification/: entities.py  events.py  specifications.py  value_objects.py
backend/src/domain/lms/: entities.py  events.py  policies.py  specifications.py  value_objects.py
backend/src/domain/shared/: entity.py  events.py  specification.py  value_objects.py
backend/src/infrastructure/cache/: redis_cache.py
backend/src/infrastructure/persistence/: unit_of_work.py
backend/src/infrastructure/persistence/models/: auth.py  base.py  crm.py  gamification.py  lms.py
backend/src/infrastructure/persistence/repositories/: user_repository.py
backend/src/infrastructure/persistence/repositories/crm/: funnel_repository.py  lead_repository.py  task_repository.py
backend/src/infrastructure/persistence/repositories/lms/: group_repository.py  lesson_repository.py  payment_repository.py  student_repository.py
backend/src/infrastructure/services/: gamification_engine.py  jwt_service.py  password_service.py  s3_service.py  storage_service.py
backend/src/infrastructure/workers/: celery_app.py
backend/src/infrastructure/workers/tasks/: auto_tasks.py  notifications.py  risk.py  salary.py
backend/src/ml/: __init__.py  feature_extractor.py  predictor.py  risk_scorer.py
backend/src/ml/data/: risk_dataset.csv
backend/src/ml/models/: feature_names.json  risk_model.joblib
backend/tests/: conftest.py
backend/tests/integration/api/: test_auth_api.py  test_gamification_api.py  test_notifications_api.py  test_public_api.py
backend/tests/integration/api/crm/: test_funnels_api.py  test_leads_api.py  test_sources_api.py
backend/tests/integration/api/lms/: test_attendance_api.py  test_catalog_api.py  test_grades_api.py  test_groups_api.py  test_lessons_api.py  test_students_api.py
backend/tests/integration/api/student/: test_portal_api.py
backend/tests/unit/application/: test_auth_use_cases.py
backend/tests/unit/application/crm/: test_funnel_use_cases.py  test_lead_use_cases.py
backend/tests/unit/application/lms/: test_group_use_cases.py  test_lesson_use_cases.py  test_student_use_cases.py
backend/tests/unit/domain/: test_auth_domain.py  test_auth_entities.py  test_crm_domain.py  test_crm_entities.py  test_gamification_domain.py  test_gamification_entities.py  test_lms_domain.py  test_lms_entities.py  test_shared.py
crm/: DESIGN.md  DEVELOPMENT_PLAN.md  Dockerfile  README.md  package-lock.json  package.json  tailwind.config.ts
crm/pages/: 00-dashboard.md  01-leads.md  02-lead-detail.md  03-contacts.md  04-tasks.md  05-analytics.md  06-settings.md  07-login.md  README.md
crm/src/app/: globals.css  layout.tsx  not-found.tsx
crm/src/app/(crm)/: layout.tsx  page.tsx
crm/src/components/shared/: ConfirmDialog.tsx  EmptyState.tsx  Providers.tsx  ThemeProvider.tsx
crm/src/components/ui/: avatar.tsx  badge.tsx  button.tsx  date-picker.tsx  dialog.tsx  input.tsx  select.tsx  tabs.tsx
crm/src/lib/api/: axios.ts
crm/src/lib/demo/: adapter.ts  data.ts
crm/src/lib/i18n/: en.ts  index.ts  ru.ts
crm/src/lib/stores/: useAuthStore.ts  useCrmStore.ts  useI18nStore.ts  useThemeStore.ts
crm/src/lib/utils/: dates.ts
crm/src/types/crm/: analytics.ts  api.ts  entities.ts  filters.ts  index.ts
deploy/: .env.backend.example  .env.example  README.md  docker-compose.prod.yml  setup.sh
deploy/nginx/: nginx.conf  ssl-params.conf
e2e/: package.json  playwright.config.ts
e2e/tests/: smoke.spec.ts
logbook/: DESIGN.md  DEVELOPMENT_PLAN.md  IMPROVEMENTS.md  README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
logbook/src/app/: globals.css  layout.tsx
logbook/src/app/(lms)/: layout.tsx
logbook/src/components/shared/: ConfirmDialog.tsx  EmptyState.tsx  Providers.tsx
student/: Dockerfile  PLAN.md  README.md  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
student/src/: middleware.ts
student/src/app/: globals.css  layout.tsx  providers.tsx
website/: README.md  package-lock.json  package.json  tailwind.config.ts
website/src/app/: globals.css  layout.tsx  page.tsx
website/src/components/: Advantages.tsx  AnimatedSection.tsx  ApplicationForm.tsx  Courses.tsx  FAQ.tsx  Footer.tsx  Header.tsx  Hero.tsx  HowItWorks.tsx  Platform.tsx  Testimonials.tsx
(+207 files in other folders)
