[tool.poetry]
name = "eduplatform-backend"
version = "0.1.0"
description = "EduPlatform centralized backend — FastAPI + Clean Architecture"
authors = ["shukhratbekovb"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.13"

# ── Web Framework ──────────────────────────────────────────────────────────────
fastapi = "^0.115"
uvicorn = { version = "^0.30", extras = ["standard"] }
python-multipart = "^0.0.9"

# ── Database ───────────────────────────────────────────────────────────────────
sqlalchemy = { version = "^2.0", extras = ["asyncio"] }
asyncpg = "^0.30"
alembic = "^1.13"

# ── Cache ──────────────────────────────────────────────────────────────────────
redis = { version = "^5.0", extras = ["hiredis"] }

# ── Async task queue ───────────────────────────────────────────────────────────
celery = { version = "^5.4", extras = ["redis"] }
kombu = "^5.3"

# ── Auth ───────────────────────────────────────────────────────────────────────
python-jose = { version = "^3.3", extras = ["cryptography"] }
passlib = { version = "^1.7", extras = ["bcrypt"] }

# ── Validation & Settings ──────────────────────────────────────────────────────
pydantic = {extras = ["email"], version = "^2.12.5"}
pydantic-settings = "^2.3"

# ── HTTP client ────────────────────────────────────────────────────────────────
httpx = "^0.27"

# ── Date & Time ────────────────────────────────────────────────────────────────
python-dateutil = "^2.9"

# ── File Storage ───────────────────────────────────────────────────────────────
aioboto3 = "^13.0"
python-magic = "^0.4"

# ── Observability ──────────────────────────────────────────────────────────────
structlog = "^24.1"
sentry-sdk = { version = "^2.0", extras = ["fastapi"] }
google-cloud-storage = "^3.10.1"

# ── ML Risk Scoring ───────────────────────────────────────────────────────────
scikit-learn = "^1.5"
joblib = "^1.4"
numpy = "^2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2"
pytest-asyncio = "^0.23"
pytest-cov = "^5.0"
pytest-mock = "^3.14"
factory-boy = "^3.3"
faker = "^25.0"
testcontainers = { version = "^4.5", extras = ["postgres", "redis"] }
httpx = "^0.27"
ruff = "^0.4"
mypy = "^1.10"
pre-commit = "^3.7"
pandas = "^2.2"
types-python-dateutil = "^2.9.0.20260408"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --cov=src --cov-report=term-missing --cov-fail-under=90"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["src"]
omit = [
    "src/infrastructure/persistence/models/*",
    "src/infrastructure/persistence/repositories/*",
    "src/infrastructure/persistence/unit_of_work.py",
    "src/infrastructure/cache/*",
    "src/infrastructure/services/s3_service.py",
    "src/infrastructure/services/storage_service.py",
    "src/infrastructure/services/gamification_engine.py",
    "src/infrastructure/workers/*",
    "src/ml/*",
    "src/api/*",
    "src/main.py",
    "src/database.py",
    "src/redis.py",
    "src/config.py",
    "src/application/interfaces/*",
    "scripts/*",
]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ ==",
    "pass",
]

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "S"]
ignore = [
    "S101",   # assert in tests
    "N815",   # mixedCase (Pydantic camelCase aliases)
    "N803",   # camelCase argument (Pydantic query params)
    "N806",   # non-lowercase variable (Pydantic models)
    "B008",   # function call in default argument (FastAPI Depends)
    "E741",   # ambiguous variable name (l, m, s — used in domain logic)
    "A002",   # shadowing builtin (type, id — common in Pydantic)
    "B904",   # raise from (not always applicable in FastAPI exception handling)
    "E711",   # comparison to None (SQLAlchemy requires == None)
    "E712",   # comparison to True/False (SQLAlchemy requires == True)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S", "ANN", "E501"]
"tests/conftest.py" = ["E402"]
"src/api/v1/lms/lessons.py" = ["S110"]
"scripts/*" = ["S", "E501", "E402"]

[tool.mypy]
python_version = "3.13"
strict = false
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
warn_return_any = false
warn_unused_ignores = false
no_implicit_optional = true

[[tool.mypy.overrides]]
module = ["src.api.v1.*", "src.infrastructure.*", "src.application.*", "src.ml.*"]
disable_error_code = ["attr-defined", "arg-type", "assignment", "union-attr", "operator", "call-arg", "no-any-return", "valid-type"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
